<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/tips"
            android:icon="@drawable/ic_tips"
            android:title="@string/menu_tips" />

        <item
            android:id="@+id/equipment"
            android:icon="@drawable/ic_equipment"
            android:title="@string/menu_equipment" />

        <item
            android:id="@+id/skiSlopes"
            android:icon="@drawable/ic_slopes"
            android:title="@string/menu_ski_slopes" />
        <item
            android:id="@+id/videos"
            android:icon="@drawable/ic_video"
            android:title="@string/menu_videos" />
        <item
            android:id="@+id/weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/menu_weather" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/btn_log_out" />
    </group>

</menu>